--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.32",
     "next-themes": "latest",
     "react": "^18",
     "react-dom": "^18",
